poc_app/poc_app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app
spec:
  selector:
    app: main-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
